feat: update consumer to handle enriched customer events with ISO timestamp

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,9 @@
 spring:
   application:
     name: ms-notifications
+  jackson:
+    serialization:
+      write-dates-as-timestamps: false
   kafka:
     consumer:
       group-id: notifications-service
