--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Email -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
     </dependencies>
 
 	<build>
